# budgee

./: CHANGELOG.md  README.md  pyproject.toml
src/budgee/: __init__.py  __main__.py  cli.py  logger.py  manager.py  models.py  structures.py  utils.py
tests/: __init__.py  test_logger.py  test_manager.py  test_models.py  test_structures.py  test_utils.py
